--- a/data_collection.ipynb
+++ b/data_collection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "id": "65efcca3-c18f-4e92-807b-a57796d8acb4",
    "metadata": {},
    "outputs": [],
@@ -18,6 +18,49 @@
     "import concurrent.futures\n",
     "import time\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "6be027de",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11322\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open('../letterboxd_proj_data/failed_fetches.jsonl', 'r') as json_file:\n",
+    "    json_list = list(json_file)\n",
+    "print(len(json_list))\n",
+    "# for json_str in json_list[:10]:\n",
+    "#     result = json.loads(json_str)\n",
+    "#     print(f\"result: {result}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "ae7cfc39",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "182284\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open('../letterboxd_proj_data/usernames_sample_100.jsonl', 'r') as json_file:\n",
+    "    json_list = list(json_file)\n",
+    "print(len(json_list))"
    ]
   },
   {
@@ -72,12 +115,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "76c5fec5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('../letterboxd_proj_data/usernames.json', 'r') as file:\n",
+    "with open('../letterboxd_proj_data/kaggle_data/usernames.json', 'r') as file:\n",
     "    try:\n",
     "        usernames_json = json.load(file)\n",
     "    except json.JSONDecodeError:\n",
@@ -106,11 +149,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 1,
    "id": "667c5e07",
    "metadata": {},
    "outputs": [],
    "source": [
+    "def scrape_single_review_page(user, i, session, output_file_name):\n",
+    "    url = \"https://letterboxd.com/{}/films/reviews/page/{}\".format(user, i)\n",
+    "    response = session.get(url, headers=headers)\n",
+    "    if response.status_code == 200:\n",
+    "        soup = BeautifulSoup(response.text, \"html.parser\")\n",
+    "\n",
+    "        # Find all film detail blocks\n",
+    "        film_blocks = soup.find_all(\"div\", class_=\"film-detail-content\")\n",
+    "        # print(user, url)\n",
+    "        # Iterate over each block and extract the required information\n",
+    "        for film in film_blocks:\n",
+    "            # Extract film title\n",
+    "            film_title_tag = film.find(\"h2\", class_=\"headline-2 prettify\").find(\"a\")\n",
+    "            film_title = film_title_tag.text.strip() if film_title_tag else \"Unknown Title\"\n",
+    "            # print(film_title)\n",
+    "\n",
+    "\n",
+    "            # Extract star rating\n",
+    "            rating_tag = film.find(\"span\", class_=\"rating\")\n",
+    "            rating_text = rating_tag.text.strip() if rating_tag else None\n",
+    "            if rating_text:\n",
+    "                rating = rating_text.count('\\u00BD')*0.5 + rating_text.count('\\u2605')\n",
+    "\n",
+    "            # Extract date\n",
+    "            date_tag = film.find(\"span\", class_=\"_nobr\")\n",
+    "            date_string = date_tag.text.strip() if date_tag else None\n",
+    "            if date_string:\n",
+    "                date_object = datetime.strptime(date_string, \"%d %b %Y\")\n",
+    "                unix_timestamp = int(date_object.timestamp())\n",
+    "            else:\n",
+    "                print(\"no date \", user, film_title, date_tag)\n",
+    "\n",
+    "            # Check if \"icon-liked\" exists in the attribution block\n",
+    "            liked_icon = film.find(\"span\", class_=\"has-icon icon-16 icon-liked\")\n",
+    "            liked = 1 if liked_icon else 0\n",
+    "\n",
+    "            # Extract review text\n",
+    "            review_body_tag = film.find(\"div\", class_=\"body-text -prose js-review-body js-collapsible-text\")\n",
+    "            review_text = review_body_tag.get_text(\" \", strip=True) if review_body_tag else None\n",
+    "\n",
+    "            # save review to json\n",
+    "            reviews_file_name = \"../letterboxd_proj_data/{}.json\".format(output_file_name)\n",
+    "            save_review_to_json(reviews_file_name, user, film_title, unix_timestamp, rating, liked, review_text)\n",
+    "    else:\n",
+    "        log_failed_fetch((i, user))\n",
+    "    # time.sleep(random.uniform(0.5, 1.5))\n",
+    "\n",
     "def save_review_to_json(file_path, user, film_title, unix_timestamp, rating, liked, review_text):\n",
     "    # Create a dictionary with the extracted details\n",
     "    review_data = {\n",
@@ -183,50 +273,7 @@
     "            last_page = max(int(a.get_text()) for a in soup.select(\".paginate-page a\") if a.get_text().isdigit())\n",
     "\n",
     "            for i in range(1, last_page + 1):\n",
-    "                url = \"https://letterboxd.com/{}/films/reviews/page/{}\".format(user, i)\n",
-    "                response = session.get(url, headers=headers)\n",
-    "                if response.status_code == 200:\n",
-    "                    soup = BeautifulSoup(response.text, \"html.parser\")\n",
-    "\n",
-    "                    # Find all film detail blocks\n",
-    "                    film_blocks = soup.find_all(\"div\", class_=\"film-detail-content\")\n",
-    "                    # print(user, url)\n",
-    "                    # Iterate over each block and extract the required information\n",
-    "                    for film in film_blocks:\n",
-    "                        # Extract film title\n",
-    "                        film_title_tag = film.find(\"h2\", class_=\"headline-2 prettify\").find(\"a\")\n",
-    "                        film_title = film_title_tag.text.strip() if film_title_tag else \"Unknown Title\"\n",
-    "                        # print(film_title)\n",
-    "\n",
-    "\n",
-    "                        # Extract star rating\n",
-    "                        rating_tag = film.find(\"span\", class_=\"rating\")\n",
-    "                        rating_text = rating_tag.text.strip() if rating_tag else None\n",
-    "                        if rating_text:\n",
-    "                            rating = rating_text.count('\\u00BD')*0.5 + rating_text.count('\\u2605')\n",
-    "\n",
-    "                        # Extract date\n",
-    "                        date_tag = film.find(\"span\", class_=\"_nobr\")\n",
-    "                        date_string = date_tag.text.strip() if date_tag else None\n",
-    "                        if date_string:\n",
-    "                            date_object = datetime.strptime(date_string, \"%d %b %Y\")\n",
-    "                            unix_timestamp = int(date_object.timestamp())\n",
-    "                        else:\n",
-    "                            print(\"no date \", user, film_title, date_tag)\n",
-    "\n",
-    "                        # Check if \"icon-liked\" exists in the attribution block\n",
-    "                        liked_icon = film.find(\"span\", class_=\"has-icon icon-16 icon-liked\")\n",
-    "                        liked = 1 if liked_icon else 0\n",
-    "\n",
-    "                        # Extract review text\n",
-    "                        review_body_tag = film.find(\"div\", class_=\"body-text -prose js-review-body js-collapsible-text\")\n",
-    "                        review_text = review_body_tag.get_text(\" \", strip=True) if review_body_tag else None\n",
-    "\n",
-    "                        # save review to json\n",
-    "                        reviews_file_name = \"../letterboxd_proj_data/{}.json\".format(output_file_name)\n",
-    "                        save_review_to_json(reviews_file_name, user, film_title, unix_timestamp, rating, liked, review_text)\n",
-    "                else:\n",
-    "                    log_failed_fetch((i, user))\n",
+    "                scrape_single_review_page(user, i, session, output_file_name)\n",
     "        else:\n",
     "            log_failed_fetch((-1, user))\n",
     "    session.close()\n"
@@ -252,58 +299,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "19aadf62",
    "metadata": {},
    "outputs": [],
    "source": [
-    "MAX_THREADS = 30\n",
-    "def scrape_single_review_page(user, i, session, output_file_name):\n",
-    "    url = \"https://letterboxd.com/{}/films/reviews/page/{}\".format(user, i)\n",
-    "    response = session.get(url, headers=headers)\n",
-    "    if response.status_code == 200:\n",
-    "        soup = BeautifulSoup(response.text, \"html.parser\")\n",
-    "\n",
-    "        # Find all film detail blocks\n",
-    "        film_blocks = soup.find_all(\"div\", class_=\"film-detail-content\")\n",
-    "        # print(user, url)\n",
-    "        # Iterate over each block and extract the required information\n",
-    "        for film in film_blocks:\n",
-    "            # Extract film title\n",
-    "            film_title_tag = film.find(\"h2\", class_=\"headline-2 prettify\").find(\"a\")\n",
-    "            film_title = film_title_tag.text.strip() if film_title_tag else \"Unknown Title\"\n",
-    "            # print(film_title)\n",
-    "\n",
-    "\n",
-    "            # Extract star rating\n",
-    "            rating_tag = film.find(\"span\", class_=\"rating\")\n",
-    "            rating_text = rating_tag.text.strip() if rating_tag else None\n",
-    "            if rating_text:\n",
-    "                rating = rating_text.count('\\u00BD')*0.5 + rating_text.count('\\u2605')\n",
-    "\n",
-    "            # Extract date\n",
-    "            date_tag = film.find(\"span\", class_=\"_nobr\")\n",
-    "            date_string = date_tag.text.strip() if date_tag else None\n",
-    "            if date_string:\n",
-    "                date_object = datetime.strptime(date_string, \"%d %b %Y\")\n",
-    "                unix_timestamp = int(date_object.timestamp())\n",
-    "            else:\n",
-    "                print(\"no date \", user, film_title, date_tag)\n",
-    "\n",
-    "            # Check if \"icon-liked\" exists in the attribution block\n",
-    "            liked_icon = film.find(\"span\", class_=\"has-icon icon-16 icon-liked\")\n",
-    "            liked = 1 if liked_icon else 0\n",
-    "\n",
-    "            # Extract review text\n",
-    "            review_body_tag = film.find(\"div\", class_=\"body-text -prose js-review-body js-collapsible-text\")\n",
-    "            review_text = review_body_tag.get_text(\" \", strip=True) if review_body_tag else None\n",
-    "\n",
-    "            # save review to json\n",
-    "            reviews_file_name = \"../letterboxd_proj_data/{}.json\".format(output_file_name)\n",
-    "            save_review_to_json(reviews_file_name, user, film_title, unix_timestamp, rating, liked, review_text)\n",
-    "    else:\n",
-    "        log_failed_fetch((i, user))\n",
-    "    # time.sleep(random.uniform(0.5, 1.5))"
+    "MAX_THREADS = 30"
    ]
   },
   {
@@ -344,10 +345,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "8e2d44a0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "no date  deathproof 13th <span class=\"_nobr\"><time class=\"localtime-d-mmm-yyyy\" datetime=\"2020-06-05T03:36:38.905Z\"></time></span>\n"
+     ]
+    }
+   ],
    "source": [
     "get_reviews_multi(usernames_sample, \"usernames_sample_4\") # took 30s with multi"
    ]
